tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@unknown_field_opt.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/unknown_field_opt.txt
---
error: Tried to render a variable that is not defined
 --> unknown_field_opt.txt:1:10
  |
1 | {{ name?.unknown }}
  |          ^^^^^^^
